# army_check

./: .gitignore  manage.py  pyproject.toml
army_check/: asgi.py  routes.py  settings.py  urls.py  wsgi.py
core/: admin.py  consumers.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_branch_name_alter_rank_name.py  0003_alter_armyperson_options_alter_branch_options_and_more.py
static/css/: main.css
static/js/: home.js  manager.js
templates/: home.html  manager.html
utils/: funcs.py  validators.py
