[project]
name = "army-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "daphne>=4.2.1",
    "django>=5.2.4",
    "pydantic>=2.11.7",
    "twisted[http2,tls]>=25.5.0",
    "whitenoise>=6.9.0",
]
